compiling but exception

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,6 @@
 [env:esp32cam]
 platform = espressif32
 lib_extra_dirs = ~/Documents/Arduino/libraries
+;lib_deps = WifiManager
 board = esp32cam
 framework = arduino
